log
Wed 22 Mar 2023 12:35:56 AM UTC: 
 tests:  0|6
total_score: 0/70
eef6ec8
Wed 22 Mar 2023 01:12:38 AM UTC: 
 list.c | 3 +++
 1 file changed, 3 insertions(+)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:32:14: error: expected declaration specifiers or ‘...’ before ‘malloc’
   32 |   List *list(malloc(sizeof(List)));
      |              ^~~~~~
list.c:33:3: error: ‘list’ undeclared (first use in this function); did you mean ‘List’?
   33 |   list -> head ;
      |   ^~~~
      |   List
list.c:33:3: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
236b535
Wed 22 Mar 2023 01:13:04 AM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:32:14: error: expected declaration specifiers or ‘...’ before ‘malloc’
   32 |   List *list(malloc(sizeof(List)));
      |              ^~~~~~
list.c:33:8: error: expected identifier or ‘(’ before ‘->’ token
   33 |   List -> head ;
      |        ^~
list.c:34:8: error: expected identifier or ‘(’ before ‘->’ token
   34 |   List -> tail;
      |        ^~
Compilation failed
f9d00eb
Wed 22 Mar 2023 01:13:33 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:33:8: error: expected identifier or ‘(’ before ‘->’ token
   33 |   List -> head ;
      |        ^~
list.c:34:8: error: expected identifier or ‘(’ before ‘->’ token
   34 |   List -> tail;
      |        ^~
list.c:32:9: error: unused variable ‘list’ [-Werror=unused-variable]
   32 |   List *list = malloc(sizeof(List));
      |         ^~~~
cc1: all warnings being treated as errors
Compilation failed
7bcabaa
Wed 22 Mar 2023 01:18:24 AM UTC: 
 list.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:33:8: error: expected identifier or ‘(’ before ‘->’ token
   33 |   List -> head = NULL;
      |        ^~
list.c:34:8: error: expected identifier or ‘(’ before ‘->’ token
   34 |   List -> tail= NULL;
      |        ^~
Compilation failed
35b27e6
Wed 22 Mar 2023 01:18:36 AM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
69d4ddc
Wed 22 Mar 2023 11:18:22 PM UTC: 
 list.c | 5 +++++
 1 file changed, 5 insertions(+)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:39:9: error: expected expression before ‘List’
   39 |     if (List == NULL || list->head == NULL) {
      |         ^~~~
list.c:42:9: error: expected identifier or ‘(’ before ‘->’ token
   42 |     List->current = list->head
      |         ^~
Compilation failed
7402f50
Wed 22 Mar 2023 11:18:28 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:42:9: error: expected identifier or ‘(’ before ‘->’ token
   42 |     List->current = list->head
      |         ^~
Compilation failed
8647fb8
Wed 22 Mar 2023 11:18:37 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:42:31: error: expected ‘;’ before ‘return’
   42 |     list->current = list->head
      |                               ^
      |                               ;
   43 |     return list->current->data;
      |     ~~~~~~                     
Compilation failed
016680e
Wed 22 Mar 2023 11:18:42 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
89a75f8
Wed 22 Mar 2023 11:19:22 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
d768971
Wed 22 Mar 2023 11:19:39 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
07f750e
Wed 22 Mar 2023 11:20:21 PM UTC: 
 list.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  0|0
7a2a5d5
Wed 22 Mar 2023 11:20:42 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 25/70
68ccd83
Wed 22 Mar 2023 11:53:46 PM UTC: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
In file included from test.c:5:
list.c: In function ‘lastList’:
list.c:58:1: error: control reaches end of non-void function [-Werror=return-type]
   58 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
9e9add8
Wed 22 Mar 2023 11:54:02 PM UTC: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘lastList’:
list.c:60:1: error: control reaches end of non-void function [-Werror=return-type]
   60 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
f9c537a
Wed 22 Mar 2023 11:54:56 PM UTC: 
 list.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
In file included from test.c:5:
list.c: In function ‘lastList’:
list.c:59:1: error: control reaches end of non-void function [-Werror=return-type]
   59 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
722597d
Wed 22 Mar 2023 11:55:12 PM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  6|4
total_score: 25/70
7dde883
Wed 22 Mar 2023 11:57:45 PM UTC: 
 list.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  9|3
total_score: 35/70
f4337f2
Thu 23 Mar 2023 02:28:50 AM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:
list.c: In function ‘pushFront’:
list.c:72:10: error: unused variable ‘new_node’ [-Werror=unused-variable]
   72 |   Node * new_node = createNode(data);
      |          ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
dfc7027
Thu 23 Mar 2023 02:29:48 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘pushFront’:
list.c:72:10: error: unused variable ‘nuevo_nodo’ [-Werror=unused-variable]
   72 |   Node * nuevo_nodo = createNode(data);
      |          ^~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
4d2b768
Thu 23 Mar 2023 02:30:44 AM UTC: 
 list.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  9|3
total_score: 35/70
b55d935
Thu 23 Mar 2023 02:32:12 AM UTC: 
 list.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  10|2
total_score: 45/70
f1e1caf
Thu 23 Mar 2023 02:47:45 AM UTC: 
 list.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  10|2
total_score: 45/70
741b80e
Thu 23 Mar 2023 02:55:08 AM UTC: 
 list.c | 9 +++++++++
 1 file changed, 9 insertions(+)
 tests:  10|2
total_score: 45/70
cdb1691
